#=======================================================================================================================
# Define Example1 target
#=======================================================================================================================
add_executable(Example1 Example1.cpp)
target_link_libraries(Example1 PRIVATE Algorithms)

#=======================================================================================================================
# Define Example2 target
#=======================================================================================================================
add_executable(Example2 Example2.cpp)
target_link_libraries(Example2 PRIVATE Algorithms)

#=======================================================================================================================
# Define Example3 target
#=======================================================================================================================
add_executable(Example3 Example3.cpp)
target_link_libraries(Example3 PRIVATE Algorithms)

#=======================================================================================================================
# Define Example3 target
#=======================================================================================================================
add_executable(Example4 Example4.cpp)
target_link_libraries(Example4 PRIVATE Algorithms)